{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 271,
  "lineage": "cad69cc8-3f4c-8250-491e-cd1d6be98eba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fcca7919e72107f3",
            "arn": "arn:aws:ec2:us-east-1:688937850973:elastic-ip/eipalloc-0fcca7919e72107f3",
            "association_id": "eipassoc-093ab4e8caab1c53d",
            "domain": "vpc",
            "id": "eipalloc-0fcca7919e72107f3",
            "instance": "i-0bd3e722b2572e2c3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a3d28cf1a97d9599",
            "private_dns": "ip-10-0-1-249.ec2.internal",
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-18-214-27-107.compute-1.amazonaws.com",
            "public_ip": "18.214.27.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688937850973:loadbalancer/app/hr-stag-alb/5f76075803493257",
            "arn_suffix": "app/hr-stag-alb/5f76075803493257",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "hr-stag-alb-592749719.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:688937850973:loadbalancer/app/hr-stag-alb/5f76075803493257",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hr-stag-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05760c636e5897545",
              "sg-059f1ed5c18274657"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0617b04d53fabe290"
              },
              {
                "subnet_id": "subnet-0637f75c8810562e8"
              }
            ],
            "subnets": [
              "subnet-0617b04d53fabe290",
              "subnet-0637f75c8810562e8"
            ],
            "tags": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:688937850973:targetgroup/mytg1-20240815115436634800000004/738ba847ca0cef2a",
            "arn_suffix": "targetgroup/mytg1-20240815115436634800000004/738ba847ca0cef2a",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:688937850973:targetgroup/mytg1-20240815115436634800000004/738ba847ca0cef2a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "false",
            "name": "mytg1-20240815115436634800000004",
            "name_prefix": "mytg1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-05760c636e5897545",
            "description": "Security group for hr-stag-alb application load balancer",
            "egress": [],
            "id": "sg-05760c636e5897545",
            "ingress": [],
            "name": "hr-stag-alb-20240815123525845400000001",
            "name_prefix": "hr-stag-alb-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "1e01adba",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-01554e5576b717db4",
            "description": "Security group for HR-stag-alb application load balancer",
            "egress": [],
            "id": "sg-01554e5576b717db4",
            "ingress": [],
            "name": "HR-stag-alb-20240815122416899600000001",
            "name_prefix": "HR-stag-alb-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "stag",
              "owners": "HR",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "HR",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "abf91deb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-09b8ed942d354246a",
            "description": "Security group for HR-stage-alb application load balancer",
            "egress": [],
            "id": "sg-09b8ed942d354246a",
            "ingress": [],
            "name": "HR-stage-alb-20240815115439262900000007",
            "name_prefix": "HR-stage-alb-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "stage",
              "owners": "HR",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "stage",
              "owners": "HR",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ignore_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:688937850973:instance/i-0bd3e722b2572e2c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd3e722b2572e2c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "angular",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3d28cf1a97d9599",
            "private_dns": "ip-10-0-1-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-18-214-27-107.compute-1.amazonaws.com",
            "public_ip": "18.214.27.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a0aed61a72cc53e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0637f75c8810562e8",
            "tags": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "stag-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0bf55d24d2ab8dffd"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-059f1ed5c18274657",
            "description": "Security Group with HTTP open for entire Internet (IPv4 CIDR), egress ports are all world open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059f1ed5c18274657",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 81 from internet",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "loadbalancer-sg-20240815115436643100000006",
            "name_prefix": "loadbalancer-sg-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "loadbalancer-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1328574318",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-059f1ed5c18274657",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1279423355",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-059f1ed5c18274657",
            "security_group_rule_id": "sgr-0381bbcda59ac4e04",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-4207423182",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-059f1ed5c18274657",
            "security_group_rule_id": "sgr-062007fbf9afd0bee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-797732661",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-059f1ed5c18274657",
            "security_group_rule_id": "sgr-093bc4ce23333a2f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow Port 81 from internet",
            "from_port": 81,
            "id": "sgrule-358699176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-059f1ed5c18274657",
            "security_group_rule_id": "sgr-0d5d862ca61dfed95",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-02df6654d94e312a1",
            "description": "Security group with SSH \u0026 HTTP (IPV4) port open for entier VPC Block",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02df6654d94e312a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_sg-20240815115436624000000001",
            "name_prefix": "private_sg-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "private_sg",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-67763212",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02df6654d94e312a1",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1582760005",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02df6654d94e312a1",
            "security_group_rule_id": "sgr-08753d86822771120",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3527393659",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02df6654d94e312a1",
            "security_group_rule_id": "sgr-0a49acb66ed1e53fd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-2882438922",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02df6654d94e312a1",
            "security_group_rule_id": "sgr-040be04afd37388c3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-0bf55d24d2ab8dffd",
            "description": "Public Bastion security group with SSH (IPV4) port open for everybody",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf55d24d2ab8dffd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-bastion-sg-20240815115436631200000003",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2620272411",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bf55d24d2ab8dffd",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-336505717",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bf55d24d2ab8dffd",
            "security_group_rule_id": "sgr-0d221dee83ea69a34",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:network-acl/acl-0ac03988d54524c7f",
            "default_network_acl_id": "acl-0ac03988d54524c7f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ac03988d54524c7f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "688937850973",
            "subnet_ids": [
              "subnet-022c4a0f89549a742",
              "subnet-051714be8bba6a445",
              "subnet-0617b04d53fabe290",
              "subnet-0637f75c8810562e8",
              "subnet-0673b2296f19fab95",
              "subnet-0dafea60ec27083ee"
            ],
            "tags": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:route-table/rtb-07539ae835516494e",
            "default_route_table_id": "rtb-07539ae835516494e",
            "id": "rtb-07539ae835516494e",
            "owner_id": "688937850973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:security-group/sg-0990784c1328862f3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0990784c1328862f3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "688937850973",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b49a8aebc868a19b",
            "arn": "arn:aws:ec2:us-east-1:688937850973:elastic-ip/eipalloc-0b49a8aebc868a19b",
            "association_id": "eipassoc-0362c5ec49d94dbe9",
            "domain": "vpc",
            "id": "eipalloc-0b49a8aebc868a19b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-077d2f7ce7a4c8b13",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-23-22-213-118.compute-1.amazonaws.com",
            "public_ip": "23.22.213.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hr-stag-JLR-VPC-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:internet-gateway/igw-0c75b872a4ffd25cc",
            "id": "igw-0c75b872a4ffd25cc",
            "owner_id": "688937850973",
            "tags": {
              "Name": "hr-stag-JLR-VPC",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b49a8aebc868a19b",
            "association_id": "eipassoc-0362c5ec49d94dbe9",
            "connectivity_type": "public",
            "id": "nat-0ed9826a061f45653",
            "network_interface_id": "eni-077d2f7ce7a4c8b13",
            "private_ip": "10.0.1.241",
            "public_ip": "23.22.213.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0637f75c8810562e8",
            "tags": {
              "Name": "hr-stag-JLR-VPC-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-us-east-1a",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ab38120767b01f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ed9826a061f45653",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ab38120767b01f6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c75b872a4ffd25cc",
            "id": "r-rtb-07f399ecf8f19b74e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f399ecf8f19b74e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:route-table/rtb-05aa4ba2ff0b013e0",
            "id": "rtb-05aa4ba2ff0b013e0",
            "owner_id": "688937850973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hr-stag-JLR-VPC-db",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-db",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:route-table/rtb-04ab38120767b01f6",
            "id": "rtb-04ab38120767b01f6",
            "owner_id": "688937850973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed9826a061f45653",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-stag-JLR-VPC-private",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-private",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:route-table/rtb-07f399ecf8f19b74e",
            "id": "rtb-07f399ecf8f19b74e",
            "owner_id": "688937850973",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c75b872a4ffd25cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hr-stag-JLR-VPC-public",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-public",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7aa7713ee71ae9",
            "route_table_id": "rtb-05aa4ba2ff0b013e0",
            "subnet_id": "subnet-051714be8bba6a445"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c67ee81793012883",
            "route_table_id": "rtb-05aa4ba2ff0b013e0",
            "subnet_id": "subnet-022c4a0f89549a742"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003eb2ea9a5987afa",
            "route_table_id": "rtb-04ab38120767b01f6",
            "subnet_id": "subnet-0673b2296f19fab95"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad3bb79c7721362",
            "route_table_id": "rtb-04ab38120767b01f6",
            "subnet_id": "subnet-0dafea60ec27083ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8963551967dab55",
            "route_table_id": "rtb-07f399ecf8f19b74e",
            "subnet_id": "subnet-0637f75c8810562e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cfb56619feb8a1",
            "route_table_id": "rtb-07f399ecf8f19b74e",
            "subnet_id": "subnet-0617b04d53fabe290"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-051714be8bba6a445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051714be8bba6a445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-022c4a0f89549a742",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022c4a0f89549a742",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-0673b2296f19fab95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673b2296f19fab95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-0dafea60ec27083ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dafea60ec27083ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-0637f75c8810562e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637f75c8810562e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:subnet/subnet-0617b04d53fabe290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0617b04d53fabe290",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "688937850973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hr-stag-JLR-VPC-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-07f5c1cb1cf232e88"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:688937850973:vpc/vpc-07f5c1cb1cf232e88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac03988d54524c7f",
            "default_route_table_id": "rtb-07539ae835516494e",
            "default_security_group_id": "sg-0990784c1328862f3",
            "dhcp_options_id": "dopt-097d2218d0b37fe6c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f5c1cb1cf232e88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07539ae835516494e",
            "owner_id": "688937850973",
            "tags": {
              "Name": "hr-stag-JLR-VPC",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-JLR-VPC",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}